[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "leap42"
version = "0.1.0"
description = "The Leap 42 decimal calendar and timekeeping library"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Adam Ableman Mazurk", email = "ableman.research@gmail.com" }
]
keywords = [
    "calendar", "timekeeping", "decimal", "leap42",
    "temporal arithmetic", "date conversion"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage" = "https://github.com/ableman-research/leap42"
"Paper" = "https://doi.org/10.5281/zenodo.20400857"
"Bug Tracker" = "https://github.com/ableman-research/leap42/issues"
